--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@ p {
   }
 }
 
-
+/* 検索ボタンの色変更 */
 .submit-color {
-  background-color: #DE660D;
+  background-color: #17a2b8;
   color: white;
   opacity: 0.9;
   transition: all 0.4s;
@@ -61,3 +61,5 @@ footer {
 .card {
   border-radius: 0;
 }
+
+
